--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "position_helper = PlayerPositionVHelper(get_location_data(load_data(\"data_finalized\\\\data_finalized.pickle\"),1), 100, 100)"
+    "# position_helper = PlayerPositionVHelper(get_location_data(load_data(\"data_finalized\\\\data_finalized.pickle\"),1), 100, 100)"
    ]
   },
   {
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "position_helper.visualize_tensor(2, True)"
+    "# position_helper.visualize_tensor(2, True)"
    ]
   }
  ],
