--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -236,6 +236,28 @@
    "source": [
     "helper.visualize_tensor_range_label(end=299,start=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c462ecf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To show the position of player in a specific time\n",
+    "# filename = \"name of the file\"\n",
+    "# helper2 = PlayerPositionVHelper(Tensor(get_location_data(load_data(filename), 0)), 200, 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ecf15a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper2.visualize_tensor(2, True)"
+   ]
   }
  ],
  "metadata": {
