--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -91,7 +91,7 @@
     "    MIN_WIDTH : Final[int] = 4\n",
     "    WIDTH_DIVISOR : Final[int] = 6\n",
     "    \n",
-    "    def __init__(self, t : Tensor):\n",
+    "    def __init__(self, t):\n",
     "        super().__init__(t)\n",
     "        self._time = t.size()[0]\n",
     "        \n",
