--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -114,8 +114,10 @@
     "    def own_calculate(self, a : float, b : float) -> float:\n",
     "        if a == 0.0 and b == 0.0:\n",
     "            return 0.0\n",
-    "        if a != 0.0 and b == 0.0:\n",
+    "        if a > 0.0 and b == 0.0:\n",
     "            return 1.0\n",
+    "        if a < 0.0 and b == 0.0:\n",
+    "            return -1.0\n",
     "        if a < b:\n",
     "            return max(-1.0, (a - b) / b)\n",
     "        else:\n",
@@ -140,7 +142,7 @@
     "            end = min(start + 399, self.tensor.size()[0] - 1)\n",
     "        plt.figure(1, figsize=(self.plot_width(), self.plot_height()))\n",
     "        plt.xticks(list(range(start, end + 10, 50)))\n",
-    "        plt.yticks(list(np.arange(0.0, 1.1, 0.1)))\n",
+    "        plt.yticks(list(np.arange(0.0, 1.2, 0.1)))\n",
     "        plt.plot(self.tensor[start: end + 1])\n",
     "        plt.grid(True)\n",
     "        plt.show()\n",
@@ -157,7 +159,7 @@
     "        data_g = self.convert_tensor(self.tensor, start, end + 1)\n",
     "        plt.figure(1, figsize=(self.plot_width(), self.plot_height()))\n",
     "        plt.xticks(list(range(start, end + 10, 50)))\n",
-    "        plt.yticks(list(np.arange(0.0, 1.1, 0.1)))\n",
+    "        plt.yticks(list(np.arange(0.0, 1.2, 0.1)))\n",
     "        plt.plot(data_g[0], label='Home')\n",
     "        plt.plot(data_g[1], label='Draw')\n",
     "        plt.plot(data_g[2], label='Away')\n",
